# neuro-social-insurance

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
docs/: V1.3.0_PENDING_ITEMS.md
frontend/admin-web/: Dockerfile  index.html  nginx-admin.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/admin-web/src/: App.tsx  index.css  main.tsx
frontend/nsi-mobile/: CAPACITOR_BUILD.md  Dockerfile  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/nsi-mobile/android/: build.gradle
frontend/nsi-mobile/public/: manifest.json
frontend/nsi-mobile/src/: App.tsx  index.css
infra/docker/: docker-compose.yml  nginx.conf
infra/docker/postgres/: init_dbs.sh
mini-program/: README.md  app.js  app.json  app.wxss  project.config.json
mini-program/pages/index/: index.js  index.json  index.wxml
mini-program/pages/profile/: profile.js  profile.wxml
mini-program/pages/sandbox/: sandbox.js  sandbox.json  sandbox.wxml  sandbox.wxss
mini-program/styles/tabs/: README.md
mini-program/utils/: api.js
services/account-center/: Dockerfile  alembic.ini  pyproject.toml
services/actuarial-engine/: Dockerfile  go.mod  main.go
services/config-service/: Dockerfile  pyproject.toml
services/config-service/src/: config.py  main.py  models.py
services/config-service/src/routers/: configs.py
services/config-service/src/services/: config_service.py
services/nsi-business/: Dockerfile  pyproject.toml
services/policy-hub/: Dockerfile  alembic.ini  pyproject.toml
(+93 files in other folders)
